fix: fix visibility of footer icons

--- a/wildlife/CSS/style.css
+++ b/wildlife/CSS/style.css
@@ -77,6 +77,10 @@
       font-family: "Open Sans";
   }
   
+  #contacts {
+      margin-left: 2px;
+  }
+  
   .header_item:last-child {
       margin-right: 0;
   }
@@ -382,18 +386,15 @@
       height: 60px;
   }
   
-  .footer_group_links {
-      padding: 0 120px;
-  }
-  
   .footer_list {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
+      padding: 0 120px 0 135px;
   }
   
   #AboutUs {
-      padding: 0 86px;
+      padding: 0 87px 0 86px;
   }
   
   .footer_link {
@@ -414,8 +415,6 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      width: 240px;
-      height: 40px;
   }
   
   .icon_img {
@@ -433,20 +432,22 @@
   
   #Facebook-img {
       background: url(../assets/Facebook.svg) no-repeat;
-      margin-right: 26px;
+      margin-right: 25px;
   }
   
   #Instagram-img {
       background: url(../assets/Instagram.svg) no-repeat;
-      margin-right: 26px;
+      margin-right: 25px;
   }
   
   #Pinterest-img {
-      background: url(../assets/Instagram.svg) no-repeat;
-      margin-right: 26px;
+      background: url(../assets/Pinterest.svg) no-repeat;
+      margin-right: 24px;
   }
   
   #Youtube-img {
       background: url(../assets/YouTube.svg) no-repeat;
+      width: 55px;
+      height: 55px;
   }
   /*Footer style end*/
